--- a/app/src/main/res/layout/activity_section_vhc2.xml
+++ b/app/src/main/res/layout/activity_section_vhc2.xml
@@ -79,10 +79,10 @@
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
                                 android:gravity="center"
-                                android:hint="yyyy-MM-dd"
+                                android:hint="YYYY-MM-DD"
                                 android:text="@={vhc.v201}"
-                                app:dateFormat="yyyy-MM-dd"
-                                app:maxDate="CR-DATE" />
+                                app:dateFormat="yyyy/MM/dd"
+                                app:maxDate="CR_DATE" />
 
                         </LinearLayout>
 
@@ -120,6 +120,7 @@
                                 android:hint="HH:mm"
                                 android:gravity="center"
                                 android:inputType="number"
+                                app:is24HourView="true"
                                 app:timeFormat="HH:mm"
                                 android:text="@={vhc.v202}" />
 
