--- a/app/src/main/res/layout/activity_section_vhc3.xml
+++ b/app/src/main/res/layout/activity_section_vhc3.xml
@@ -113,6 +113,7 @@
                             android:id="@+id/v302"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
+                            android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz "
                             android:hint="@string/v302"
                             android:text="@={vhc.v302}" />
 
